--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/styled-engine-sc": "^6.4.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.3",
+    "redux": "^5.0.1",
+    "safe-buffer": "^5.2.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
